# safe_append

./: CMakeLists.txt  README.markdown  main.cpp
include/: byte_utils.h  safe_append.h  safe_append_internals.h  sha1.h  sha512.h
src/: safe_append.cpp  sha1.cpp  sha512.cpp
